themes/leon-overweel-com/static/css/main.css
:root {
    --color-hackathon-light: #fcdede;
    --color-machine-learning-light: #eee2ff;
    --color-robot-light: #fcf8de;
    --color-rowing-light: #e2f6ff;
    --color-video-light: #fcdef7;
    --color-web-light: #e6fcde;
}

body {
    margin: 0;
    color: #333;
    font-family: 'Open Sans', sans-serif;
    line-height: 1.5rem;
}

h1, h2, h3 {
    font-family: 'Poppins', sans-serif;
}

h2 > a {
    color: inherit;
    text-decoration: none;
}

a {
    color: #7c81aa;
}

a:hover {
    text-decoration: none;
}

.divider-full {
    height: 3rem;
    width: 100%;
}

.divider-half {
    height: 1.5rem;
    width: 100%;
}

.hero {
    width: 100%;
    min-height: 60vh;
    background-color: #192135;
    background-image: url("https://source.unsplash.com/GZd3l4Yxdxs");
    background-size: cover;
    background-position: bottom;
    overflow: auto;
    display: flex;
    color: #f9fafc;
}

.hero a {
    color: #e6ebf4;
}

.hero > div {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.hero > div > h1 {
    margin-bottom: 0.5rem;
}

.intro {
    display: flex;
    align-items: center;
}

.intro > img {
    width: 11rem;
    height: 11rem;
    border-radius: 6rem;
    margin: 1rem 0;
}

.intro > div {
    padding-right: 1rem;
}

.social > a {
    text-decoration: none;
    display: inline-block;
}

.social > a > div {
    margin: 0.5rem 0.2rem 0 0;
    background-color: #f2f4f9;
    padding: 0.3rem 1rem 0.4rem 1rem;
    border-radius: 0.7rem;
}

.social > a > div:hover { 
    background-color: #e6ebf4;
}

.centered-column {
    max-width: 40rem;
    margin: 0 auto;
    padding: 0 1rem;
    overflow: auto;
}

.wide {
    max-width: 50rem;
}

.dark {
    color: #f9fafc;
    background-color: #192135;
    width: 100%;
}

.current-projects {
    display: flex;
    flex-direction: column;
}

.current-projects > div {
    width: 100%;
    max-width: 40rem;
    margin: 0.5rem 0;
}

.current-projects > div:nth-child(odd) {
    align-self: flex-start;
}

.current-projects > div:nth-child(even) {
    align-self: flex-end;
}

.project-name {
    font-family: 'Poppins', sans-serif;
    font-size: 1.2rem;
    margin: 0 0 -6px 0.7rem;
    vertical-align: baseline;
}

.project-content {
    padding: 0.7rem;
    border-radius: 0.7rem;
    background-color: #e6ebf4;
}

.project-content > p {
    margin: 0;
}

.year-toggle {
    background-color: #f2f4f9;
    color: #333;
    cursor: pointer;
    padding: 0.7rem;
    border-radius: 0.7rem;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.3s;
    font-size: 1rem;
    margin-top: 0.5rem;
    margin-bottom: 0;
}

.year-toggle:hover {
    background-color: #e6ebf4;
}

.year-toggle:after {
    content: '\02795';
    font-size: 0.7rem;
    float: right;
}

.year-open {
    background-color: #e6ebf4;
    border-radius: 0.7rem 0.7rem 0 0;
    margin-bottom: 0;
}

.year-open:after {
    content: "\2796";
}

.year-projects {
    overflow: hidden;
    border: 2px solid #e6ebf4;
    border-radius: 0 0 0.7rem 0.7rem;
    margin: 0;
}

.year-projects>ul>li>a {
    font-weight: bold;
}

.year-projects>ul {
    list-style-type: none;
    padding: 0 0.7rem;
    margin: 0.2rem 0 0.2rem 0;
}

.year-projects>ul>li {
    margin: 0 0 0.5rem 0;
}

.category {
    text-transform: capitalize;
    display: inline-block;
    padding: 0.1rem 0.4rem 0.2rem 0.4rem;
    border-radius: 0.3rem;
    font-size: 0.8rem;
    line-height: 1rem;
    margin-bottom: -1rem;
}

div.category {
    margin: 0 0.15rem -1rem 0.15rem;
}

.category-bullet {
    display: inline-block;
    border: 1px solid #333;
    border-radius: 10px;
    height: 10px;
    width: 10px;
    margin-left: 0.3rem;
}

.background-hackathon {
    background-color: var(--color-hackathon-light);
}

.background-machine-learning {
    background-color: var(--color-machine-learning-light);
}

.background-robot {
    background-color: var(--color-robot-light);
}

.background-rowing {
    background-color: var(--color-rowing-light);
}

.background-video {
    background-color: var(--color-video-light);
}

.background-web {
    background-color: var(--color-web-light);
}

.photo-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 0.5rem;
}

.photo-container>div {
    height: calc((50rem - 3 * 0.5rem) / 4);
    width: 100%;
    background-color: #2d3854;
    border-radius: 0.7rem;
}

.photo-container>div>a {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template: 1fr / 1fr;
}

.photo {
    max-width: 100%;
    max-height: 100%;
    align-self: center;
    justify-self: center;
}

@media screen and (max-width: 50rem) {
    .centered-column-wide {
        max-width: 40rem;
    }

    .photo-container {
        grid-template-columns: repeat(3, 1fr);
    }

    .photo-container>div {
        height: calc((40rem - 2 * 0.5rem) / 3);
    }
}

@media screen and (max-width: 40rem) {
    .hero > div > h1 {
        text-align: center;
        color: #2d3854;
        margin-bottom: 1rem;
    }

    .intro {
        flex-wrap: wrap;
        justify-content: center;
    }

    .intro > img {
        order: -1;
    }

    .photo-container>div {
        height: calc(33vw - 2 * 0.5rem);
    }
}

@media screen and (max-width: 30rem) {
    .intro > img {
        height: 10rem;
        width: 10rem;
    }

    .photo-container {
        grid-template-columns: repeat(2, 1fr);
    }

    .photo-container>div {
        height: calc(50vw - 0.5rem - 1rem);
    }
}

